--- a/Frontend/public/manifest.json
+++ b/Frontend/public/manifest.json
@@ -1,20 +1,24 @@
 {
-    "name": "Codici & Password",
-    "short_name": "Codici & Password",
-    "start_url": "index.html",
+    "name": "App Codici & Password",
+    "short_name": "App Codici",
+    "description": "Cassaforte sicura per le tue credenziali e scadenze.",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#0a0f1e",
     "theme_color": "#0a0f1e",
+    "orientation": "portrait",
     "icons": [
         {
             "src": "assets/images/app-icon.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
             "src": "assets/images/app-icon.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         }
     ]
 }
