--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "dependencies": {
     "@playwright/test": "^1.57.0",
     "playwright": "^1.57.0"
+  },
+  "devDependencies": {
+    "stylelint": "^17.1.0",
+    "stylelint-config-standard": "^40.0.0"
   }
 }
