Pulizia: rimossi file e cartelle non necessari per la sola app frontend

--- a/Frontend/public/manifest.json
+++ b/Frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "App Codici & Password",
-    "short_name": "Codici & Password",
+    "short_name": "Codex",
     "description": "Cassaforte sicura per le tue credenziali e scadenze.",
     "start_url": "index.html",
     "scope": "./",
