--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,9 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^7.0.3"
+    "firebase-functions": "^7.0.5",
+    "googleapis": "^171.4.0",
+    "nodemailer": "^8.0.1"
   },
   "devDependencies": {
     "eslint": "^9.39.2",
