--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@playwright/test": "^1.57.0",
+    "firebase-admin": "^13.6.1",
     "playwright": "^1.57.0"
   },
   "devDependencies": {
