--- a/Frontend/public/manifest.json
+++ b/Frontend/public/manifest.json
@@ -10,15 +10,15 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "./assets/images/app-icon.png",
+            "src": "./assets/images/app-icon.jpg",
             "sizes": "192x192",
-            "type": "image/png",
+            "type": "image/jpeg",
             "purpose": "any"
         },
         {
-            "src": "./assets/images/app-icon.png",
+            "src": "./assets/images/app-icon.jpg",
             "sizes": "512x512",
-            "type": "image/png",
+            "type": "image/jpeg",
             "purpose": "any"
         }
     ]
